--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "Mantenance API for xochi digital",
     "keywords": ["api", "xochi-digital"],
     "license": "MIT",
+    "version": "1.0.1",
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
